--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: lightgreen;
 }
 #Header{
   display: flex;
